PMMCompilerControl/src/parser/PmmParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

/* El contenido va a ser copiado en PmmParser */
import ast.*;
import ast.definitions.*;
import ast.expressions.*;
import ast.statements.*;
import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, TRASH=38, 
		COMMENT=39, ID=40, INT_CONSTANT=41, CHAR_CONSTANT=42, REAL_CONSTANT=43;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_statement = 2, RULE_expression = 3, 
		RULE_type = 4, RULE_atributes = 5, RULE_variableDefinition = 6, RULE_functionDefinition = 7, 
		RULE_functionInvocation = 8, RULE_body = 9, RULE_expressions = 10, RULE_params = 11, 
		RULE_functionBody = 12, RULE_ids = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "statement", "expression", "type", "atributes", "variableDefinition", 
			"functionDefinition", "functionInvocation", "body", "expressions", "params", 
			"functionBody", "ids"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'def'", "'main'", "'('", "')'", "':'", "'{'", "'}'", "'print'", 
			"'input'", "'return'", "'='", "'if'", "'else'", "'while'", "'['", "']'", 
			"'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'=='", "'!='", "'>'", 
			"'>='", "'<'", "'<='", "'||'", "'&&'", "'char'", "'double'", "'int'", 
			"'struct'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TRASH", "COMMENT", "ID", "INT_CONSTANT", "CHAR_CONSTANT", 
			"REAL_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> definitions = new ArrayList<Definition>();
		public VariableDefinitionContext vd;
		public FunctionDefinitionContext fd;
		public MainContext m;
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(35);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(28);
						((ProgramContext)_localctx).vd = variableDefinition();
						setState(29);
						match(T__0);
						 _localctx.definitions.addAll(((ProgramContext)_localctx).vd.ast); 
						}
						break;
					case T__1:
						{
						setState(32);
						((ProgramContext)_localctx).fd = functionDefinition();
						 _localctx.definitions.add(((ProgramContext)_localctx).fd.ast); 
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(40);
			((ProgramContext)_localctx).m = main();
			setState(41);
			match(EOF);

			                    _localctx.definitions.add(((ProgramContext)_localctx).m.ast);
			                    ((ProgramContext)_localctx).ast =  new Program(0, 0, _localctx.definitions);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public Definition ast;
		public Token T;
		public FunctionBodyContext fb;
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((MainContext)_localctx).T = match(T__1);
			setState(45);
			match(T__2);
			setState(46);
			match(T__3);
			setState(47);
			match(T__4);
			setState(48);
			match(T__5);
			setState(49);
			match(T__6);
			setState(50);
			((MainContext)_localctx).fb = functionBody();
			setState(51);
			match(T__7);

			                    ((MainContext)_localctx).ast =  new FunctionDefinition(((MainContext)_localctx).T.getLine(), ((MainContext)_localctx).T.getCharPositionInLine() + 1,
			                        new FunctionType(((MainContext)_localctx).T.getLine(), ((MainContext)_localctx).T.getCharPositionInLine() + 1,
			                            new ArrayList<VariableDefinition>(), VoidType.getInstance()), "main", ((MainContext)_localctx).fb.ast);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public List<Statement> elseBody = new ArrayList<Statement>();
		public ExpressionsContext ex;
		public ExpressionContext ex1;
		public ExpressionContext ex2;
		public Token T;
		public BodyContext b1;
		public BodyContext b2;
		public FunctionInvocationContext fi;
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(T__8);
				setState(55);
				((StatementContext)_localctx).ex = expressions();
				setState(56);
				match(T__0);

				                    for (Expression expression : ((StatementContext)_localctx).ex.ast) {
				                        _localctx.ast.add(new Print(expression.getLine(), expression.getColumn(), expression));
				                    }
				                
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(T__9);
				setState(60);
				((StatementContext)_localctx).ex = expressions();
				setState(61);
				match(T__0);

				                    for (Expression expression : ((StatementContext)_localctx).ex.ast) {
				                        _localctx.ast.add(new Input(expression.getLine(), expression.getColumn(), expression));
				                    }
				                
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				match(T__10);
				setState(65);
				((StatementContext)_localctx).ex1 = expression(0);
				setState(66);
				match(T__0);

				                    _localctx.ast.add(new Return(((StatementContext)_localctx).ex1.ast.getLine(), ((StatementContext)_localctx).ex1.ast.getColumn(), ((StatementContext)_localctx).ex1.ast));
				                
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				((StatementContext)_localctx).ex1 = expression(0);
				setState(70);
				match(T__11);
				setState(71);
				((StatementContext)_localctx).ex2 = expression(0);
				setState(72);
				match(T__0);

				                    _localctx.ast.add(new Assignment(((StatementContext)_localctx).ex1.ast.getLine(), ((StatementContext)_localctx).ex1.ast.getColumn(), ((StatementContext)_localctx).ex1.ast, ((StatementContext)_localctx).ex2.ast));
				                
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				((StatementContext)_localctx).T = match(T__12);
				setState(76);
				((StatementContext)_localctx).ex1 = expression(0);
				setState(77);
				match(T__5);
				setState(78);
				((StatementContext)_localctx).b1 = body();
				setState(84);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(79);
					match(T__13);
					setState(80);
					match(T__5);
					setState(81);
					((StatementContext)_localctx).b2 = body();
					 ((StatementContext)_localctx).elseBody =  ((StatementContext)_localctx).b2.ast; 
					}
					break;
				}

				                    _localctx.ast.add(new IfElse(((StatementContext)_localctx).T.getLine(), ((StatementContext)_localctx).T.getCharPositionInLine() + 1, ((StatementContext)_localctx).ex1.ast, ((StatementContext)_localctx).b1.ast, _localctx.elseBody));
				                
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				((StatementContext)_localctx).T = match(T__14);
				setState(89);
				((StatementContext)_localctx).ex1 = expression(0);
				setState(90);
				match(T__5);
				setState(91);
				((StatementContext)_localctx).b1 = body();

				                    _localctx.ast.add(new While(((StatementContext)_localctx).T.getLine(), ((StatementContext)_localctx).T.getCharPositionInLine() + 1, ((StatementContext)_localctx).ex1.ast, ((StatementContext)_localctx).b1.ast));
				                
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(94);
				((StatementContext)_localctx).fi = functionInvocation();
				setState(95);
				match(T__0);

				                    _localctx.ast.add(((StatementContext)_localctx).fi.ast);
				                
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expression ast;
		public ExpressionContext ex1;
		public Token ID;
		public Token INT_CONSTANT;
		public Token CHAR_CONSTANT;
		public Token REAL_CONSTANT;
		public Token T;
		public FunctionInvocationContext fi;
		public TypeContext tp;
		public Token OP;
		public ExpressionContext ex2;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(PmmParser.INT_CONSTANT, 0); }
		public TerminalNode CHAR_CONSTANT() { return getToken(PmmParser.CHAR_CONSTANT, 0); }
		public TerminalNode REAL_CONSTANT() { return getToken(PmmParser.REAL_CONSTANT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(101);
				((ExpressionContext)_localctx).ID = match(ID);

				                    ((ExpressionContext)_localctx).ast =  new Variable(((ExpressionContext)_localctx).ID.getLine(), ((ExpressionContext)_localctx).ID.getCharPositionInLine() + 1, (((ExpressionContext)_localctx).ID!=null?((ExpressionContext)_localctx).ID.getText():null));
				                
				}
				break;
			case 2:
				{
				setState(103);
				((ExpressionContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);

				                    ((ExpressionContext)_localctx).ast =  new IntLiteral(((ExpressionContext)_localctx).INT_CONSTANT.getLine(),
				                        ((ExpressionContext)_localctx).INT_CONSTANT.getCharPositionInLine() + 1, LexerHelper.lexemeToInt((((ExpressionContext)_localctx).INT_CONSTANT!=null?((ExpressionContext)_localctx).INT_CONSTANT.getText():null)));
				                
				}
				break;
			case 3:
				{
				setState(105);
				((ExpressionContext)_localctx).CHAR_CONSTANT = match(CHAR_CONSTANT);

				                    ((ExpressionContext)_localctx).ast =  new CharLiteral(((ExpressionContext)_localctx).CHAR_CONSTANT.getLine(),
				                        ((ExpressionContext)_localctx).CHAR_CONSTANT.getCharPositionInLine() + 1, LexerHelper.lexemeToChar((((ExpressionContext)_localctx).CHAR_CONSTANT!=null?((ExpressionContext)_localctx).CHAR_CONSTANT.getText():null)));
				                
				}
				break;
			case 4:
				{
				setState(107);
				((ExpressionContext)_localctx).REAL_CONSTANT = match(REAL_CONSTANT);

				                    ((ExpressionContext)_localctx).ast =  new RealLiteral(((ExpressionContext)_localctx).REAL_CONSTANT.getLine(),
				                        ((ExpressionContext)_localctx).REAL_CONSTANT.getCharPositionInLine() + 1, LexerHelper.lexemeToReal((((ExpressionContext)_localctx).REAL_CONSTANT!=null?((ExpressionContext)_localctx).REAL_CONSTANT.getText():null)));
				                
				}
				break;
			case 5:
				{
				setState(109);
				((ExpressionContext)_localctx).T = match(T__3);
				setState(110);
				((ExpressionContext)_localctx).ex1 = expression(0);
				setState(111);
				match(T__4);

				                    ((ExpressionContext)_localctx).ast =  new Parenthesis(((ExpressionContext)_localctx).T.getLine(), ((ExpressionContext)_localctx).T.getCharPositionInLine() + 1, ((ExpressionContext)_localctx).ex1.ast);
				                
				}
				break;
			case 6:
				{
				setState(114);
				((ExpressionContext)_localctx).fi = functionInvocation();

				                    ((ExpressionContext)_localctx).ast =  ((ExpressionContext)_localctx).fi.ast;
				                
				}
				break;
			case 7:
				{
				setState(117);
				((ExpressionContext)_localctx).T = match(T__3);
				setState(118);
				((ExpressionContext)_localctx).tp = type();
				setState(119);
				match(T__4);
				setState(120);
				((ExpressionContext)_localctx).ex1 = expression(7);

				                    ((ExpressionContext)_localctx).ast =  new Cast(((ExpressionContext)_localctx).T.getLine(), ((ExpressionContext)_localctx).T.getCharPositionInLine() + 1, ((ExpressionContext)_localctx).ex1.ast, ((ExpressionContext)_localctx).tp.ast);
				                
				}
				break;
			case 8:
				{
				setState(123);
				match(T__18);
				setState(124);
				((ExpressionContext)_localctx).ex1 = expression(6);

				                    ((ExpressionContext)_localctx).ast =  new UnaryMinus(((ExpressionContext)_localctx).ex1.ast.getLine(), ((ExpressionContext)_localctx).ex1.ast.getColumn(), ((ExpressionContext)_localctx).ex1.ast);
				                
				}
				break;
			case 9:
				{
				setState(127);
				match(T__19);
				setState(128);
				((ExpressionContext)_localctx).ex1 = expression(5);

				                    ((ExpressionContext)_localctx).ast =  new UnaryNot(((ExpressionContext)_localctx).ex1.ast.getLine(), ((ExpressionContext)_localctx).ex1.ast.getColumn(), ((ExpressionContext)_localctx).ex1.ast);
				                
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(165);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(163);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(133);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(134);
						((ExpressionContext)_localctx).OP = _input.LT(1);
						_la = _input.LA(1);
						if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0) ) {
							((ExpressionContext)_localctx).OP = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(135);
						((ExpressionContext)_localctx).ex2 = expression(5);

						                              ((ExpressionContext)_localctx).ast =  new Arithmetic(((ExpressionContext)_localctx).ex1.ast.getLine(), ((ExpressionContext)_localctx).ex1.ast.getColumn(), ((ExpressionContext)_localctx).ex1.ast, ((ExpressionContext)_localctx).ex2.ast, (((ExpressionContext)_localctx).OP!=null?((ExpressionContext)_localctx).OP.getText():null));
						                          
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.ex1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(138);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(139);
						((ExpressionContext)_localctx).OP = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__18 || _la==T__23) ) {
							((ExpressionContext)_localctx).OP = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(140);
						((ExpressionContext)_localctx).ex2 = expression(4);
